--- a/Lect4.html
+++ b/Lect4.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="./Images/Facebook-logo.png">
 </head>
 <body>
     <pre>    This is used to print spaces on screen    </pre>
@@ -18,5 +16,116 @@
 <input type="email" >
 <input type="submit">
 </form>
+
+<!-- ====================================Lect 5=========================== -->
+
+
+<!-- ========================Radio input==================== -->
+<input type="radio" name="gender" id="">
+<label >male</label>
+<input type="radio" name="gender" id="">
+<label >Female</label>
+<br>
+
+<!-- ========================Check box input==================== -->
+<input type="checkbox" name="fav1" id="">
+<label >Black</label>
+<input type="checkbox" name="fav2" id="">
+<label >Blue</label>
+<input type="checkbox" name="fav3" id="">
+<label >Green</label>
+<input type="checkbox" name="fav4" id="">
+<label >White</label>
+
+<!-- ========================Table==================== -->
+<table border="1px">
+    <tr>
+        <th>Name</th>
+        <th>Fater Name</th>
+        <th>GPA</th>
+
+    </tr>
+    <tr>
+        <td>Rutaab</td>
+        <td>Abdul Raof</td>
+        <td>4</td>
+
+    </tr>
+</table>
+
+<!-- ======================================lect6============================================= -->
+<table border="1px">
+    <tr>
+        <th></th>
+    </tr>
+    <tr>
+        <td></td>
+    </tr>
+</table>
+
+<!-- ================================table================================ -->
+<table border="1px">
+    <tr>
+        <th>Student Name</th>
+        <th>Father Name</th>
+        <th>Marks</th>
+
+    </tr>
+    <tr>
+        <td>Ali</td>
+        <td>Ahmad</td>
+        <td>4</td>
+    </tr>
+</table>
+<br>
+<select name="" id="">
+    <option value="">Sahiwal</option>
+    <option value="">Sahiwal1</option>
+    <option value="">Sahiwal2</option>
+    <option value="">Sahiwal3</option>
+    <option value="">Sahiwal4</option>
+    <option value="">Sahiwal5</option>
+</select>
+
+<input type="color">
+
+<input type="date" name="" id="">
+<input type="time" name="" id="">
+<input type="number" name="" id="">
+<input type="datetime" name="" id="">
+<input type="hidden" name="" id="">
+
+
+<!-- ==================================================IFRAMES======================================================== -->
+<iframe src="" ></iframe>
+<!-- ==================================================video tag======================================================== -->
+<video controls autoplay muted>
+
+    <source src=""> 
+</video>
+<!-- ==================================================speacial symbol======================================================== -->
+<!-- ==================================================audio======================================================== -->
+<audio>
+    <source src=""> 
+</audio>
+
+<!-- ========================search input==================== -->
+<input type="search" list="data1">
+<datalist id="data1">
+    <Option>Pakistan</Option>
+    <Option>India</Option>
+    <Option>Usa</Option>
+    <Option>Austrlia</Option>
+</datalist>
+
+<!-- ========================FIELD TAG==================== -->
+<fieldset>
+    <legend>Basic Information</legend>
+    <input type="text">
+    <br>
+    <input type="text">
+</fieldset>
+<!-- ========================DIR TAG==================== -->
+<p dir="rtl">آپ کیسے ہو</p>
 </body>
 </html>
